fix: add-docker ТЗ16