@@ -1,100 +1,111 @@
 package ru.practicum.shareit.request.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import ru.practicum.shareit.request.dto.ItemRequestDtoOut;
-import ru.practicum.shareit.request.service.ItemRequestServiceImpl;
+import ru.practicum.shareit.request.model.ItemRequest;
+import ru.practicum.shareit.request.mapper.ItemRequestMapper;
+import ru.practicum.shareit.request.dto.ItemRequestDtoRQ;
+import ru.practicum.shareit.request.dto.ItemRequestDtoRS;
+import ru.practicum.shareit.request.service.ItemRequestService;
+import ru.practicum.shareit.user.model.User;
 
-import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.ArrayList;
+import java.util.Collections;
 
-import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(controllers = ItemRequestController.class)
+@RequiredArgsConstructor(onConstructor_ = @Autowired)
 class ItemRequestControllerTest {
-
+    private final ObjectMapper objectMapper;
+    private final MockMvc mvc;
     @MockBean
-    private ItemRequestServiceImpl requestService;
+    ItemRequestService itemRequestService;
 
-    @Autowired
-    private ObjectMapper mapper;
-
-    @Autowired
-    private MockMvc mvc;
-
-    private final ItemRequestDtoOut requestDto = new ItemRequestDtoOut(
+    User user = new User(
+            1L,
+            "name",
+            "email@email.ru");
+    ItemRequestDtoRS itemRequestDtoRS = new ItemRequestDtoRS(
+            1L,
             1L,
             "description",
-            2L,
-            LocalDateTime.of(2023, 7, 1, 12, 12, 12));
+            LocalDateTime.now(),
+            new ArrayList<>());
+    ItemRequestDtoRQ itemRequestDtoRQ = new ItemRequestDtoRQ(
+            1L,
+            1L,
+            "description",
+            LocalDateTime.now()
+    );
 
     @Test
-    void saveNewRequest() throws Exception {
-        when(requestService.saveNewRequest(any(), anyLong())).thenReturn(requestDto);
+    void createTest() throws Exception {
+        when(itemRequestService.create(anyLong(), any())).thenReturn(itemRequestDtoRS);
 
         mvc.perform(post("/requests")
-                        .content(mapper.writeValueAsString(requestDto))
-                        .characterEncoding(StandardCharsets.UTF_8)
                         .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON)
                         .header("X-Sharer-User-Id", 1L)
-                        .accept(MediaType.APPLICATION_JSON))
+                        .content(objectMapper.writeValueAsString(itemRequestDtoRS)))
                 .andExpect(status().isOk())
-                .andExpect(content().json(mapper.writeValueAsString(requestDto)))
-                .andExpect(jsonPath("$.id", is(requestDto.getId()), Long.class))
-                .andExpect(jsonPath("$.description", is(requestDto.getDescription()), String.class))
-                .andExpect(jsonPath("$.requestorId", is(requestDto.getRequestorId()), Long.class));
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.requesterId").value(1L))
+                .andExpect(jsonPath("$.description").value("description"));
     }
 
     @Test
-    void getRequestsByRequestor() throws Exception {
-        when(requestService.getRequestsByRequestor(anyLong())).thenReturn(List.of(requestDto));
+    void getRequestsInfoTest() throws Exception {
+        ItemRequest itemRequest = ItemRequestMapper.toItemRequest(itemRequestDtoRQ, user);
+        ItemRequestDtoRS req = ItemRequestMapper.toItemRequestDtoRS(itemRequest);
+        when(itemRequestService.getRequests(anyLong(), anyInt(), anyInt())).thenReturn(Collections.singletonList(req));
 
         mvc.perform(get("/requests")
-                        .content(mapper.writeValueAsString(requestDto))
-                        .characterEncoding(StandardCharsets.UTF_8)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .header("X-Sharer-User-Id", 1L)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(content().json(mapper.writeValueAsString(List.of(requestDto))));
+                        .accept(MediaType.APPLICATION_JSON)
+                        .header("X-Sharer-User-Id", 1L))
+                .andExpect(status().isOk());
     }
 
     @Test
-    void getAllRequests() throws Exception {
-        when(requestService.getAllRequests(anyInt(), anyInt(), anyLong())).thenReturn(List.of(requestDto));
-
-        mvc.perform(get("/requests/all")
-                        .content(mapper.writeValueAsString(requestDto))
-                        .characterEncoding(StandardCharsets.UTF_8)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .header("X-Sharer-User-Id", 1L)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(content().json(mapper.writeValueAsString(List.of(requestDto))));
-    }
-
-    @Test
-    void getRequestById() throws Exception {
-        when(requestService.getRequestById(anyLong(), anyLong())).thenReturn(requestDto);
+    void getRequestInfoTest() throws Exception {
+        ItemRequest itemRequest = ItemRequestMapper.toItemRequest(itemRequestDtoRQ, user);
+        ItemRequestDtoRS req = ItemRequestMapper.toItemRequestDtoRS(itemRequest);
+        when(itemRequestService.getInfo(anyLong(), anyLong())).thenReturn(req);
 
         mvc.perform(get("/requests/1")
-                        .content(mapper.writeValueAsString(requestDto))
-                        .characterEncoding(StandardCharsets.UTF_8)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .header("X-Sharer-User-Id", 1L)
-                        .accept(MediaType.APPLICATION_JSON))
+                        .accept(MediaType.APPLICATION_JSON)
+                        .header("X-Sharer-User-Id", 1L))
                 .andExpect(status().isOk())
-                .andExpect(content().json(mapper.writeValueAsString(requestDto)));
+                .andExpect(jsonPath("$.requesterId").value(1L))
+                .andExpect(jsonPath("$.description").value("description"));
+    }
+
+    @Test
+    void getRequestsListTest() throws Exception {
+        ItemRequest itemRequest = ItemRequestMapper.toItemRequest(itemRequestDtoRQ, user);
+        ItemRequestDtoRS req = ItemRequestMapper.toItemRequestDtoRS(itemRequest);
+        when(itemRequestService.getRequests(anyLong(), anyInt(), anyInt())).thenReturn(Collections.singletonList(req));
+
+        mvc.perform(get("/requests/all")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON)
+                        .header("X-Sharer-User-Id", 1L))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].requesterId").value(1L))
+                .andExpect(jsonPath("$[0].description").value("description"));
     }
 }
